<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="7dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/id_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textSize="15dp"
        android:paddingTop="1dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/edit_st_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_name" />

    <TextView
        android:id="@+id/id_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Min Distance"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/id_name" />

    <EditText
        android:id="@+id/edit_st_mindistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_username"
        android:layout_toEndOf="@+id/id_username"
        android:layout_alignTop="@+id/id_username" />

    <TextView
        android:id="@+id/id_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max Distance"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/id_username" />

    <EditText
        android:id="@+id/edit_st_maxdistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_email"
        android:layout_toEndOf="@+id/id_email"
        android:layout_alignTop="@+id/id_email" />

    <TextView
        android:id="@+id/id_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Min Age"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/id_email" />

    <EditText
        android:id="@+id/edit_st_minage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_age"
        android:layout_toEndOf="@+id/id_age"
        android:layout_alignTop="@+id/id_age" />

    <TextView
        android:id="@+id/id_occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max Age"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/id_age" />

    <EditText
        android:id="@+id/edit_st_maxage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_occupation"
        android:layout_toEndOf="@+id/id_occupation"
        android:layout_alignTop="@+id/id_occupation" />

    <TextView
        android:id="@+id/id_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PhotoUrl"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/id_occupation" />

    <EditText
        android:id="@+id/edit_st_photourl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_description"
        android:layout_toEndOf="@+id/id_description"
        android:layout_alignTop="@+id/id_description" />

    <TextView
        android:id="@+id/st_mf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sex (M or F)"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/id_description" />

    <EditText
        android:id="@+id/st_malefemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/st_mf"
        android:layout_toEndOf="@+id/st_mf"
        android:layout_alignTop="@+id/st_mf" />

    <TextView
        android:id="@+id/st_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Acoount (Public or Private)"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/st_mf" />

    <EditText
        android:id="@+id/st_publicprivate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/st_acct"
        android:layout_toEndOf="@+id/st_acct"
        android:layout_alignTop="@+id/st_acct" />

    <TextView
        android:id="@+id/st_rmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reminder"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_below="@id/st_acct" />

    <EditText
        android:id="@+id/edit_st_dailyreminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:layout_toRightOf="@id/st_rmd"
        android:layout_toEndOf="@+id/st_rmd"
        android:layout_alignTop="@+id/st_rmd" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Submit"

        android:textSize="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/st_rmd" />

</RelativeLayout>