...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/a" />

        <TextView
...
            android:layout_below="@+id/tv_lat"
            android:textColor="?attr/colorPrimary"
            android:text="Action2" />


        <ImageButton
            android:id="@+id/favorite_button"
            android:clickable="true"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_marginRight="@dimen/md_keylines"
            app:srcCompat="@drawable/ic_favorite_black_24dp"
            android:layout_below="@+id/card_title"
...
